@@ -76,7 +76,8 @@ dist_pkgdata_DATA = usermode.ui
 
 userhelper_SOURCES = userhelper.c userhelper.h shvar.c shvar.h
 userhelper_CPPFLAGS = $(AM_CPPFLAGS) -DSYSCONFDIR='"$(sysconfdir)"'
-userhelper_LDADD = $(LIBUSER_LIBS) $(GLIB_LIBS) $(PAM_LIBS) $(SELINUX_LIBS) $(EFENCE_LIBS)
+userhelper_LDADD = liblib.a $(LIBUSER_LIBS) $(GLIB_LIBS) $(PAM_LIBS) \
+	$(SELINUX_LIBS) $(EFENCE_LIBS)
 
 userinfo_SOURCES = userinfo.c
 userinfo_CPPFLAGS = $(AM_CPPFLAGS) $(PIXMAPDIR_CPPFLAGS) $(SBINDIR_CPPFLAGS) \
